z-index fix

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -152,7 +152,7 @@
 		content: var( --background-overlay );
 		display: block;
 		position: absolute;
-		z-index: 0;
+		z-index: 1;
 		width: 100%;
 		height: 100%;
 		left: 0;
